Desafio FrontEnd1 - estilização e função de filtro de pesquisa

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="search">
             <div class="search_bar">
-                <img src="./images/search_icon.svg" alt="">
+                <img class="search_icon" src="./images/search_icon.svg" alt="">
                 <input type="search" class="search_input" placeholder="Artists, songs, or podcasts">
             </div>
         </nav>
@@ -20,6 +20,9 @@
         <h2 class="search_title">Recent searches</h2>
         <ul class="artists_cards_list">
             <!-- <li class="artist_card">
+                <div class="close_artist">
+                    <img class="close_icon" src="images/x.png" alt="">
+                </div>
                 <div class="artist_profile">
                     <img src="./images/beyonce.jpg" alt="" class="artist_profile_image">
                 </div>
